fix preview overflow

--- a/src/pages/Languages/AnalysisLanguage/AnalysisLanguage.less
+++ b/src/pages/Languages/AnalysisLanguage/AnalysisLanguage.less
@@ -92,6 +92,9 @@
     flex-grow: 1;
     column-gap: var(--text-inline-padding);
     padding: var(--text-padding);
+    span {
+      overflow-wrap: anywhere;
+    }
   }
 
   &__tag-input {
